# generation-lore

./: .gitignore  README.md  cache_cleaner.dev.sh  intialize.py  main.py  pyproject.toml  requirements.txt
src/genlore/: __main__.py  app.py  main_window.py  ui_main_window.py  ui_main_window.qss
src/genlore/modules/db_module/: db_module.py
src/genlore/modules/story_module/: story_module.py
src/genlore/modules/summary_module/: summary_module.py
src/genlore/ui_modules/: title_bar.py
src/genlore/ui_modules/doc_gen_view/: action_functions.py  doc_gen_view.py  page.css  ui_action_panel.py  ui_action_panel.qss  ui_application_panel.py  ui_application_panel.qss
src/genlore/ui_modules/doc_obs_view/: action_functions.py  doc_obs_view.py  ui_action_panel.py  ui_action_panel.qss  ui_application_panel.py  ui_application_panel.qss
src/genlore/ui_modules/favourite_view/: action_functions.py  favourite_view.py  ui_action_panel.py  ui_action_panel.qss  ui_application_panel.py  ui_application_panel.qss
src/genlore/ui_modules/list_view/: action_functions.py  list_view.py  ui_action_panel.py  ui_action_panel.qss  ui_application_panel.py  ui_application_panel.qss
src/genlore/ui_modules/recent_view/: action_functions.py  recent_view.py  ui_action_panel.py  ui_action_panel.qss  ui_application_panel.py  ui_application_panel.qss
test/: test_story_module.py
testing/: db_module.py  story_module.py  summary_module.py  test_db_module.py  test_story_module.py  test_summary_module.py
